--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Index</title>
-    <script src="/public/bundle.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/public/style.css">
   </head>
   <body>
+    <div id="main"></div>
     <h1>Hello</h1>
     <h2>Hello</h2>
+    <script src="/public/bundle.js" type="text/javascript"></script>
   </body>
 </html>
